--- a/docs/3-前端工程化.md
+++ b/docs/3-前端工程化.md
@@ -382,7 +382,7 @@
 
 6. RESTful API  
       即表述性状态传递（Representational State Transfe）  
-      <img src="../images/工程化/RESTful.png" width="500" height="180">
+      <img src="images/工程化/RESTful.png" width="500" height="180">
 
       ```Js
       // 获取用户列表
@@ -452,7 +452,7 @@
       ```
       
       使用回调函数，结果是  
-      ![alt text](../images/工程化/exec.png)
+      ![alt text](images/工程化/exec.png)
 
       - **spawn方法**  
       &emsp;&emsp;使用指定的命令行参数创建新进程。
@@ -472,7 +472,7 @@
       ```
 
       没有回调函数，正常顺序执行，结果是  
-      ![alt text](../images/工程化/spawn.png)
+      ![alt text](images/工程化/spawn.png)
 
       - **fork方法**  
       &emsp;&emsp; spawn()的特殊形式，用于在子进程中运行的模块，如 fork('./son.js') 相当于 spawn('node', ['./son.js']) 。与spawn方法不同的是，  
@@ -685,7 +685,7 @@ connection.query(addSql,addSqlParams,function (err, result)
    - innerHeight()
    - outerWidth()
    - outerHeight()  
-![alt text](../images/工程化/尺寸.png)
+![alt text](images/工程化/尺寸.png)
 
 #### 4. 遍历
 
@@ -1059,7 +1059,7 @@ v-on 事件监听 ====== v-on:click="say"  简写为 @click="say"
 #### 7.表单
 
 MVVM模型
-<img src="../images/工程化/mvvm.png" width="450">  
+<img src="images/工程化/mvvm.png" width="450">  
 
 v-model 指令在表单控件元素上创建双向数据绑定  
 v-model 会根据控件类型自动选取正确的方法来更新元素
@@ -1638,7 +1638,7 @@ MVC的增强版：本质没区别，只是代码的变动
 优点：首屏时间稍块，SEO（按照搜索引擎的算法）效果好
 缺点：页面切换慢、用户体验差（加载慢）
 
-<img src="../images/工程化/单页多页.png" width="500">
+<img src="images/工程化/单页多页.png" width="500">
 
 ### 七、前端路由
 
@@ -1657,7 +1657,7 @@ SPA能够以模拟多页面应用的效果，归功于其前端路由机制。
    - history.replaceState(data,title,url);//替换当前页在历史记录中的信息。
    - history.state;// 可以得到当前页的state信息。
    - window.onpopstate;// 一个事件2，监控浏览器前进后退
-![alt text](../images/工程化/前端路由.png)
+![alt text](images/工程化/前端路由.png)
 
 ### 八、PWA 渐进式Web应用
 
