--- a/docs/5-数据结构.md
+++ b/docs/5-数据结构.md
@@ -109,13 +109,13 @@ KMP、字典树、马拉车、AC自动机、后缀数组、BM
 #### (2) 双向链表
 
 既可以从头又可以从末尾开始遍历  
-![alt text](../images/数据结构/双向链表.png)  
+![alt text](images/数据结构/双向链表.png)  
 左指针 指向上一个结点的 数据  
 右指针 指向下一个结点的 数据
 
 #### (3) 循环链表
 
-![alt text](../images/数据结构/循环链表.png)  
+![alt text](images/数据结构/循环链表.png)  
 尾结点的指针指向了 **头结点**(没有数据的)  
 特点：  
 
@@ -137,16 +137,16 @@ KMP、字典树、马拉车、AC自动机、后缀数组、BM
 #### (1) 顺序栈
 
 只允许在一段插入或删除的线性表  
-<img src="../images/数据结构/栈.png" width="250">  
+<img src="images/数据结构/栈.png" width="250">  
 
 #### (2) 链栈
 
-![链栈](../images/数据结构/链栈.png)  
+![链栈](images/数据结构/链栈.png)  
 栈空：头指针指向Null  
 
 #### (3) 共享栈（两栈共享空间）
 
-![共享栈](../images/数据结构/共享栈.png)  
+![共享栈](images/数据结构/共享栈.png)  
 栈空：两栈都向两边收缩，左栈top=-1，右栈top=MaxSize  
 栈满：两栈都向中间挤压，当top0 + 1 = top1，相遇
 
@@ -157,12 +157,12 @@ KMP、字典树、马拉车、AC自动机、后缀数组、BM
 需要队头指针（front）和队尾指针（rear）  
 假溢出：  
 再在E的上方插入元素F，会超过队列最大长度，但并未全部占慢  
-![假溢出](../images/数据结构/假溢出.png)  
+![假溢出](images/数据结构/假溢出.png)  
 
 #### (2) 循环队列（解决假溢出）
 
 头尾相接：  
-<img src="../images/数据结构/循环队列.png" width="400">  
+<img src="images/数据结构/循环队列.png" width="400">  
 
 为判断 循环对列为空或满，要牺牲一个存储空间  
 
@@ -176,7 +176,7 @@ KMP、字典树、马拉车、AC自动机、后缀数组、BM
 #### (4) 链队列
 
 将队头指针指向链队列的头结点，而队尾指针指向终端结点  
-![alt text](../images/数据结构/链队列.png)  
+![alt text](images/数据结构/链队列.png)  
 
 队列空：front==rear
 
@@ -248,7 +248,7 @@ Hash表的删除：
 - 性质3：包含n个节点的二叉树的高度至少为log2 (n+1)
 - 性质4：在任意一颗二叉树中，若终端节点的个数为n0,度为2的节点数为n2，则n0=n2+1  
 
-<img src="../images/数据结构/二叉树.png" width="350" height="200">
+<img src="images/数据结构/二叉树.png" width="350" height="200">
 
 分类：
 
@@ -269,7 +269,7 @@ Hash表的删除：
 - 从根节点到某一节点，路径上经过的字符连接起来，为该节点对应的字符串。
 - 每个节点的所有子节点包含的字符都不相同。
 
-<img src="../images/数据结构/前缀树.png" width="400">
+<img src="images/数据结构/前缀树.png" width="400">
 
 ### 3. 堆(Heap)
 
@@ -289,7 +289,7 @@ Hash表的删除：
 
 线段树是一棵 **平衡二叉树** 。母结点代表整个区间的和，越往下区间越小,每个节点都对应一条线段[ 区间 ],但并非所有线段都是树的节点  
 对于一个数组 [1,2,3,4,5]  
-<img src="../images/数据结构/线段树.png" width="400">
+<img src="images/数据结构/线段树.png" width="400">
 
 采用深度优先DFS构建线段树
 
@@ -302,7 +302,7 @@ Hash表的删除：
 
 - 哈夫曼编码  
    一种压缩编码的编码算法,对频率高的字符使用较短的编码,频率低的字符使用较高的编码,实现数据压缩  
-   <img src="../images/数据结构/哈夫曼编码.png" width="200">
+   <img src="images/数据结构/哈夫曼编码.png" width="200">
 
 ### 扩展
 
@@ -327,11 +327,11 @@ Hash表的删除：
 
 - LL( / )型 =======> 先变色再右旋
 
-   <img src="../images/数据结构/红黑树LL.png" width="400">
+   <img src="images/数据结构/红黑树LL.png" width="400">
 
 - LR( < )型 =======> 左旋变成LL型,变色+右旋
 
-   <img src="../images/数据结构/红黑树LR.png" width="500">
+   <img src="images/数据结构/红黑树LR.png" width="500">
 
 - RR( \ )型 =======> 先变色再左旋
 - RL( > )型 =======> 右旋旋变成RR型,变色+左旋
@@ -341,25 +341,25 @@ Hash表的删除：
 
 1. N 的父节点是红色，叔叔节点 U 也是红色。由于 P 和 N 均为红色，需要调整。P 和 U 的颜色染成黑色，再将 G 的颜色染成红色,其上要变成红色节点,向上递归调整  
 
-   <img src="../images/数据结构/红黑树插入3.png" width="400">
+   <img src="images/数据结构/红黑树插入3.png" width="400">
 2. N 的父节点为红色，叔叔节点U为黑色,节点 N 是 P 的右孩子，且节点 P 是 G 的左孩子。对P左旋，调整N与P的位置，变成上一种情况  
 
-   ![alt text](../images/数据结构/红黑树插入4.png)
+   ![alt text](images/数据结构/红黑树插入4.png)
 3. 第2种还可以对G右旋，调整P与G的位置，互换颜色  
-   ![alt text](../images/数据结构/红黑树插入5.png)
+   ![alt text](images/数据结构/红黑树插入5.png)
 
 (6) 删除  
 &emsp;&emsp;要首先确定删除的节点有几个孩子节点，若有2个就不能直接删除，要先找到该节点先驱（左子树中最大的节点）或者后继（右子树中最小的节点），然后将前驱或者后继的值复制到要删除的节点中，最后再将前驱或后继删除。  
 &emsp;&emsp;当删除的红色时，拿子节点补空位即可；当为黑色时，那所有经过该节点路径黑高都-1，若该节点子节点时红色，拿子节点替换被删除的节点，并将子节点染成黑色。若子节点为黑色较复杂：  
 
 1. S 为红色，其他节点为黑色，此时可对N的父节点左旋，然后互换P与S颜色，黑高不满足，继续调整
-![alt text](../images/数据结构/红黑树删除2.png)
-1. N 的父节点，兄弟节点 S 和 S 的孩子节点均为黑色，此时可简单把S染成红色  
-![alt text](../images/数据结构/红黑树删除3.png)
-1. N 的父节点是红色，S 和 S 孩子为黑色,交换P与S颜色即可。
-2. S 为黑色，S 的左孩子为红色，右孩子为黑色。N 的父节点颜色可红可黑，且 N 是 P 左孩子。对 S 进行右旋操作，并互换 S 和 SL 的颜色。
-3. S 为黑色，S 的右孩子为红色。N 的父节点颜色可红可黑，且 N 是其父节点左孩子。对 P 进行左旋操作，并互换 P 和 S 的颜色，并将 SR 变为黑色  
-<img src="../images/数据结构/红黑树删除456.png" width="400">
+   ![alt text](images/数据结构/红黑树删除2.png)
+2. N 的父节点，兄弟节点 S 和 S 的孩子节点均为黑色，此时可简单把S染成红色  
+   ![alt text](images/数据结构/红黑树删除3.png)
+3. N 的父节点是红色，S 和 S 孩子为黑色,交换P与S颜色即可。
+4. S 为黑色，S 的左孩子为红色，右孩子为黑色。N 的父节点颜色可红可黑，且 N 是 P 左孩子。对 S 进行右旋操作，并互换 S 和 SL 的颜色。
+5. S 为黑色，S 的右孩子为红色。N 的父节点颜色可红可黑，且 N 是其父节点左孩子。对 P 进行左旋操作，并互换 P 和 S 的颜色，并将 SR 变为黑色  
+<img src="images/数据结构/红黑树删除456.png" width="400">
 
 #### 2. 伸展树（基于程序局部性原理）
 
@@ -369,10 +369,10 @@ Hash表的删除：
 
 - 之字形
    总是先旋转查询节点，先左再右  
-   <img src="../images/数据结构/之字形.png" width="500">
+   <img src="images/数据结构/之字形.png" width="500">
 - 一字型  
    先旋转其父节点到祖父节点，然后再旋转查询节点到父节点  
-   <img src="../images/数据结构/一字型.png" width="500">
+   <img src="images/数据结构/一字型.png" width="500">
 
 
 #### 3. Treap（树堆 Tree+Heap）
@@ -391,7 +391,7 @@ Hash表的删除：
    - 如果根不是终端结点，则根结点至少有一个关键字，即至少有2棵子树。【根的关键字取值范围是[1，m-1]，子树的取值范围是[2,m]】
    - 所有叶子结点都出现在同一水平，没有任何信息（高度一致）。
    - 最小高度：h < logm(n+1)  
-      <img src="../images/数据结构/B树.png" width="500">
+      <img src="images/数据结构/B树.png" width="500">
 
 2. B+树
 
@@ -405,7 +405,7 @@ Hash表的删除：
    - 每个非叶子结点（除了根）具有至少⌈ m/2⌉子树，即最少有⌈m/2⌉个关键字。
    - 终端结点包含全部关键字及相应记录的指针，叶结点中将关键字按大小顺序排序，并且相邻叶结点按大小顺序相互链接起来。
    - 所有分支结点（可以视为索引的索引）中金包含他的各个子节点（即下一级的索引块）中关键字最大值，及指向其子结点的指针。  
-   <img src="../images/数据结构/B+树.png" width="450">
+   <img src="images/数据结构/B+树.png" width="450">
 
 3. B树和B+树的区别
 
@@ -441,7 +441,7 @@ Hash表的删除：
 维护链：
 
 - dfs序：要维护的是重链，搜重儿子，将它转换到数列上来，不先搜重儿子，重链上的dfs序可能会断掉（深度优先）   
-<img src="../images/数据结构/树链剖分.png" width="300">
+<img src="images/数据结构/树链剖分.png" width="300">
 
 时间戳：dfs第一次访问到达每个节点的时间，从1开始叠加  
 用处：把树变成连续的，某节点的子树上的节点一定大于这个节点的时间戳且连续
@@ -455,9 +455,9 @@ Hash表的删除：
 - 迪杰斯特拉算法(贪心算法)
 
 使用 **广度优先搜索** 解决赋权有向图或者无向图的单源最短路径问题  
-<img src="../images/数据结构/迪杰斯特拉1.png" width="400">
-<img src="../images/数据结构/迪杰斯特拉2.png" width="400">
-<img src="../images/数据结构/迪杰斯特拉3.png" width="400">
+<img src="images/数据结构/迪杰斯特拉1.png" width="400">
+<img src="images/数据结构/迪杰斯特拉2.png" width="400">
+<img src="images/数据结构/迪杰斯特拉3.png" width="400">
 数据结构/
 - 弗洛伊德算法（Floyd）
 
@@ -473,8 +473,8 @@ Hash表的删除：
 ```
 
 
-<img src="../images/数据结构/佛洛依德1.png" width="400">
-<img src="../images/数据结构/佛洛依德2.png" width="400">
+<img src="images/数据结构/佛洛依德1.png" width="400">
+<img src="images/数据结构/佛洛依德2.png" width="400">
 
 ### 2. 并查集
 
@@ -484,7 +484,7 @@ Hash表的删除：
 - 查询（Find）：查询两个元素是否在同一个集合中。
 
 类比成帮派，代表元素位帮主,有事找帮主(根节点)  
-<img src="../images/数据结构/并查集.png" width="150">  
+<img src="images/数据结构/并查集.png" width="150">  
 
 **路径压缩**： 变成一个链效率较低，使 **每个结点的父节点都设成根节点**  
 **按秩合并**： 让秩小的树依附到秩大的树上  
@@ -512,7 +512,7 @@ Prim普利姆算法：  （贪心算法）
 
 常用方法：  
 选一个没有前驱(入度为0)的顶点输出并删掉其和其边，重复  
-<img src="../images/数据结构/拓扑排序.png" width="400">
+<img src="images/数据结构/拓扑排序.png" width="400">
 
 ### 扩展5
 
@@ -526,7 +526,7 @@ Prim普利姆算法：  （贪心算法）
 有向图G中，如果两个顶点u，ｖ间有一条从ｕ到ｖ的有向路径，同时还有一条从ｖ到ｕ的有向路径，则称 **两个顶点强连通**。如果有向图G的每两个顶点都强连通，称G是一个 **强连通图**。有向非强连通图的极大强连通子图，称为 **强连通分量**。  
 
 DFS生成树  
-![alt text](../images/数据结构/DFS生成树.png)  
+![alt text](images/数据结构/DFS生成树.png)  
 4种边：
 
 1. 树边： 每次搜索找到一个还没有访问过的结点的时候就形成了一条树边  
@@ -541,7 +541,7 @@ Tarjan 算法求强连通分量：
   - 该点已经访问过[ 有dfn值 ]
   - 存在一条从x出发的边以它为终点
 
-<img src="../images/数据结构/Tarjan算法.png" width="400">  
+<img src="images/数据结构/Tarjan算法.png" width="400">  
 
 ① 从1遍历到5时，如果选择先走5 -> 2，那么点2、3、4、5的low值都会追溯到2的时间戳  
 ② 点5继续遍历，会到点1并发现1也走过了并且dfn[ 1 ]的时间戳更早  
@@ -563,7 +563,7 @@ Tarjan 算法求强连通分量：
 #### 4. 二分图（偶图）
 
 设G=(V,E)是一个无向图，如果顶点V可分割为两个互不相交的子集(A,B)，并且图中的每条边（i，j）所关联的两个顶点i和j分别属于这两个不同的顶点集(i in A,j in B)  
-<img src="../images/数据结构/二分图.png" width="500">  
+<img src="images/数据结构/二分图.png" width="500">  
 
 - 匹配：G的一个子图M中，M的边集{E}中的任意两条边都不依附于同一个顶点  
 - 极大匹配：在当前已完成的匹配下,无法再通过增加未完成匹配的边的方式来增加匹配的边数  
@@ -613,7 +613,7 @@ Tarjan 算法求强连通分量：
 - ④希尔排序(缩小增量法)  
    分组思想，取gap=5值分5组，在每组中进行直接插入排序，并每次减小gap值。  
 
-   ![alt text](../images/数据结构/希尔排序.png)
+   ![alt text](images/数据结构/希尔排序.png)
 - ⑤选择排序  
    在未排序中找最小，放到起始位置，再在剩余未排序中找最小拍到已排序的末尾
 - ⑥堆排序
@@ -721,7 +721,7 @@ if (tempMap.containsKey(n)) {
 ##### (3) 分块(索引顺序)查找
 
 额外建立一个“索引表”，将查找表分为若干子表（或称块），对每个子表建立一个索引项，其中包含两项内容：关键字项（其值为该子表内的最大）和指针项（指示该子表的第一个记录在表中的位置）。每个索引项构成一个索引表，索引表按关键字有序排列。  
-![alt text](../images/数据结构/分块查找.png)
+![alt text](images/数据结构/分块查找.png)
 
 ##### (4) 树结构查找
 
@@ -737,7 +737,7 @@ if (tempMap.containsKey(n)) {
 
 核心是利用匹配失败后的信息，尽量减少模式串与主串的匹配次数以达到快速匹配的目的  
 时间复杂度是 O(m+n)  
-![alt text](../images/数据结构/KMP.png)  
+![alt text](images/数据结构/KMP.png)  
 字符串P有字串 `ACT` 和 `ACY`，当T与Y不匹配时，可能匹配左边的AC，就从j的位置开始比较  
 
 构造next数组，存储，P字符串的 最长公共前缀后缀长度，且next[0]=-1
