--- a/docs/1-三大件.md
+++ b/docs/1-三大件.md
@@ -8,7 +8,7 @@
 
 1. 语义化标签  
    \<header>  </br>
-   <img src="../images/三大件/image.png" width="300">  
+   <img src="images/三大件/image.png" width="300">  
 2. 浏览器支持  
 3. 多媒体标签  
     + **embed**(视频、音频 不支持移动端)  
@@ -66,7 +66,7 @@
 
 ### 4. 盒子模型
 
-   <img src="../images/三大件/image-1.png"  width="300" height="200">
+   <img src="images/三大件/image-1.png"  width="300" height="200">
 
 ### 5. 层叠规则
 
@@ -109,7 +109,7 @@
    > `baseline`: 项目的第一行文字的基线对齐
    >
 
-   <img src="../images/三大件/image-3.png" width="400" height="200">
+   <img src="images/三大件/image-3.png" width="400" height="200">
 
 6. 项目属性
    > `order` ========= 数值越小越靠前(0)  
@@ -136,7 +136,7 @@
          grid-column-end: 3;  
          }
    >
-<img src="../images/三大件/image-4.png" width="400" height="250">
+<img src="images/三大件/image-4.png" width="400" height="250">
 
 ##### (4) 瀑布流
 
@@ -223,7 +223,7 @@ linear-gradient(to right, red , yellow)
 background-image: linear-gradient(-90deg, red, yellow);
 ```
 
-<img src="../images/三大件/image-5.png" alt="渐变色" width="200" height="150">
+<img src="images/三大件/image-5.png" alt="渐变色" width="200" height="150">
 
 #### 10. 背景
 
@@ -237,9 +237,9 @@ background-image: linear-gradient(-90deg, red, yellow);
 
 > border-radius 圆角  
 > box-shadow 阴影（10px 10px 5px #888888）  
-<img src="../images/三大件/image-6.png" alt="圆角和阴影示例" width="200" height="200">  
+<img src="images/三大件/image-6.png" alt="圆角和阴影示例" width="200" height="200">  
 > border-image 边界图片   
-<img src="../images/三大件/image-7.png" alt="边界图片示例" width="200" height="200">
+<img src="images/三大件/image-7.png" alt="边界图片示例" width="200" height="200">
 
 #### 12. 圆角
 
@@ -716,7 +716,7 @@ xmlhttp.open("GET","/try/ajax/gethint.php?q="+str,true);
 + 同步任务
 + 异步任务
 
-<img src="../images/三大件/image-8.png" width="450px" height="400px"/>
+<img src="images/三大件/image-8.png" width="450px" height="400px"/>
 
 ```js
    let data = [];                            
@@ -742,7 +742,7 @@ xmlhttp.open("GET","/try/ajax/gethint.php?q="+str,true);
 + 网络进程： 负责加载网络资源
 + **渲染进程**： 启动后开启一个渲染主线程，负责执行HTML、CSS、JS代码（每个标签页开一个渲染进程）
 
-<img src="../images/三大件/渲染进程.png" width="480">
+<img src="images/三大件/渲染进程.png" width="480">
 
 1. 在最开始的时候，渲染主线程会进⼊⼀个⽆限循环
 2. 每⼀次循环会检查消息队列中是否有任务存在。如果有，就取出第⼀个任务
