--- a/docs/5-数据结构.md
+++ b/docs/5-数据结构.md
@@ -109,13 +109,13 @@ KMP、字典树、马拉车、AC自动机、后缀数组、BM
 #### (2) 双向链表
 
 既可以从头又可以从末尾开始遍历  
-![alt text](images/数据结构/双向链表.png)  
+<img alt="双向链表" src="images/数据结构/双向链表.png">
 左指针 指向上一个结点的 数据  
 右指针 指向下一个结点的 数据
 
 #### (3) 循环链表
 
-![alt text](images/数据结构/循环链表.png)  
+<img src="images/数据结构/循环链表.png">   
 尾结点的指针指向了 **头结点**(没有数据的)  
 特点：  
 
@@ -141,12 +141,12 @@ KMP、字典树、马拉车、AC自动机、后缀数组、BM
 
 #### (2) 链栈
 
-![链栈](images/数据结构/链栈.png)  
+<img src="images/数据结构/链栈.png">  
 栈空：头指针指向Null  
 
 #### (3) 共享栈（两栈共享空间）
 
-![共享栈](images/数据结构/共享栈.png)  
+<img src="images/数据结构/共享栈.png">  
 栈空：两栈都向两边收缩，左栈top=-1，右栈top=MaxSize  
 栈满：两栈都向中间挤压，当top0 + 1 = top1，相遇
 
@@ -157,7 +157,7 @@ KMP、字典树、马拉车、AC自动机、后缀数组、BM
 需要队头指针（front）和队尾指针（rear）  
 假溢出：  
 再在E的上方插入元素F，会超过队列最大长度，但并未全部占慢  
-![假溢出](images/数据结构/假溢出.png)  
+<img src="images/数据结构/假溢出.png">
 
 #### (2) 循环队列（解决假溢出）
 
@@ -176,7 +176,7 @@ KMP、字典树、马拉车、AC自动机、后缀数组、BM
 #### (4) 链队列
 
 将队头指针指向链队列的头结点，而队尾指针指向终端结点  
-![alt text](images/数据结构/链队列.png)  
+<img src="images/数据结构/链队列.png">  
 
 队列空：front==rear
 
@@ -344,18 +344,18 @@ Hash表的删除：
    <img src="images/数据结构/红黑树插入3.png" width="400">
 2. N 的父节点为红色，叔叔节点U为黑色,节点 N 是 P 的右孩子，且节点 P 是 G 的左孩子。对P左旋，调整N与P的位置，变成上一种情况  
 
-   ![alt text](images/数据结构/红黑树插入4.png)
+   <img src="images/数据结构/红黑树插入4.png">  
 3. 第2种还可以对G右旋，调整P与G的位置，互换颜色  
-   ![alt text](images/数据结构/红黑树插入5.png)
+   <img src="images/数据结构/红黑树插入5.png">
 
 (6) 删除  
 &emsp;&emsp;要首先确定删除的节点有几个孩子节点，若有2个就不能直接删除，要先找到该节点先驱（左子树中最大的节点）或者后继（右子树中最小的节点），然后将前驱或者后继的值复制到要删除的节点中，最后再将前驱或后继删除。  
 &emsp;&emsp;当删除的红色时，拿子节点补空位即可；当为黑色时，那所有经过该节点路径黑高都-1，若该节点子节点时红色，拿子节点替换被删除的节点，并将子节点染成黑色。若子节点为黑色较复杂：  
 
 1. S 为红色，其他节点为黑色，此时可对N的父节点左旋，然后互换P与S颜色，黑高不满足，继续调整
-   ![alt text](images/数据结构/红黑树删除2.png)
+   <img src="images/数据结构/红黑树删除2.png">
 2. N 的父节点，兄弟节点 S 和 S 的孩子节点均为黑色，此时可简单把S染成红色  
-   ![alt text](images/数据结构/红黑树删除3.png)
+   <img src="images/数据结构/红黑树删除3.png">
 3. N 的父节点是红色，S 和 S 孩子为黑色,交换P与S颜色即可。
 4. S 为黑色，S 的左孩子为红色，右孩子为黑色。N 的父节点颜色可红可黑，且 N 是 P 左孩子。对 S 进行右旋操作，并互换 S 和 SL 的颜色。
 5. S 为黑色，S 的右孩子为红色。N 的父节点颜色可红可黑，且 N 是其父节点左孩子。对 P 进行左旋操作，并互换 P 和 S 的颜色，并将 SR 变为黑色  
@@ -526,7 +526,7 @@ Prim普利姆算法：  （贪心算法）
 有向图G中，如果两个顶点u，ｖ间有一条从ｕ到ｖ的有向路径，同时还有一条从ｖ到ｕ的有向路径，则称 **两个顶点强连通**。如果有向图G的每两个顶点都强连通，称G是一个 **强连通图**。有向非强连通图的极大强连通子图，称为 **强连通分量**。  
 
 DFS生成树  
-![alt text](images/数据结构/DFS生成树.png)  
+<img src="images/数据结构/DFS生成树.png"> 
 4种边：
 
 1. 树边： 每次搜索找到一个还没有访问过的结点的时候就形成了一条树边  
@@ -613,7 +613,7 @@ Tarjan 算法求强连通分量：
 - ④希尔排序(缩小增量法)  
    分组思想，取gap=5值分5组，在每组中进行直接插入排序，并每次减小gap值。  
 
-   ![alt text](images/数据结构/希尔排序.png)
+   <img src="images/数据结构/希尔排序.png">
 - ⑤选择排序  
    在未排序中找最小，放到起始位置，再在剩余未排序中找最小拍到已排序的末尾
 - ⑥堆排序
@@ -721,7 +721,7 @@ if (tempMap.containsKey(n)) {
 ##### (3) 分块(索引顺序)查找
 
 额外建立一个“索引表”，将查找表分为若干子表（或称块），对每个子表建立一个索引项，其中包含两项内容：关键字项（其值为该子表内的最大）和指针项（指示该子表的第一个记录在表中的位置）。每个索引项构成一个索引表，索引表按关键字有序排列。  
-![alt text](images/数据结构/分块查找.png)
+<img src="images/数据结构/分块查找.png">
 
 ##### (4) 树结构查找
 
@@ -737,7 +737,7 @@ if (tempMap.containsKey(n)) {
 
 核心是利用匹配失败后的信息，尽量减少模式串与主串的匹配次数以达到快速匹配的目的  
 时间复杂度是 O(m+n)  
-![alt text](images/数据结构/KMP.png)  
+<img src="images/数据结构/KMP.png">  
 字符串P有字串 `ACT` 和 `ACY`，当T与Y不匹配时，可能匹配左边的AC，就从j的位置开始比较  
 
 构造next数组，存储，P字符串的 最长公共前缀后缀长度，且next[0]=-1
