--- a/docs/6-面试.md
+++ b/docs/6-面试.md
@@ -222,7 +222,8 @@
 &emsp;&emsp;在解析页面时，发现外部链接要请求数据，比较耗时  
 
 解决方法： 将后面的解析提前，刚开始渲染页面时预先步做DNS解析  
-![alt text](images/面试/DNS优化.png)
+<img src="images/面试/DNS优化.png">  
+
 使用工程化工具适配所有脚手架工具  
 
 - Vue-cli: wabpack  
