--- a/docs/1-三大件.md
+++ b/docs/1-三大件.md
@@ -100,7 +100,8 @@
    > `center`： 居中  
    > `space-between`：两端对齐，项目之间的间隔都相等，从头开始。  
    > `space-around`：每个项目两侧的间隔相等。
-![alt text](images/三大件/justify-content.png)
+   <img src="images/三大件/justify-content.png">  
+
 5. `align-items`属性===(定义项目在交叉轴上如何对齐)
    > `stretch`（默认值）：项目未设置高度或设为auto，占满整个容器的高度
    > `flex-start`：交叉轴的起点对齐  
