--- a/docs/4-算法.md
+++ b/docs/4-算法.md
@@ -163,7 +163,8 @@ class MyHashMap {
 &emsp;&emsp;给1个排序数组和个1目标值，在数组中找到目标值，并返回其索引。如果目标值不存在于数组中，返回它将会被按顺序插入的位置。  
 &emsp;&emsp;⭐️必须使用时间复杂度为 O(log n) 的算法。  
 
-![算法示例1](images/算法/算法示例1.png)
+<img src="images/算法/算法示例1.png">  
+    
 
     ```Java
     1. 暴力解法：   不满足时间复杂度为O(log n)  此乃线性搜索
@@ -200,7 +201,7 @@ class MyHashMap {
 
     ---
 
-3. 合并区间  
+1. 合并区间  
 &emsp;&emsp;以数组 intervals 表示若干个区间的集合，其中单个区间为 intervals[i] = [starti, endi] 。合并所有重叠的区间，并返回 一个不重叠的区间数组，该数组需恰好覆盖输入中的所有区间 。
 
     ```Java
@@ -239,7 +240,7 @@ class MyHashMap {
     最后需要合并的 取右边更大的一个  更改值
 
     ---
-4. 二维数组---原地旋转矩阵  
+1. 二维数组---原地旋转矩阵  
     &emsp;&emsp;一幅由 N × N 矩阵表示的图像，其中每个像素的大小为 4 字节。请将图像旋转 90 度。  
     ⭐不占用额外内存空间能否做到？
 
@@ -297,12 +298,12 @@ class MyHashMap {
         }
     ```
 
-    ![alt text](images/算法/原地旋转.png)
+    <img src="images/算法/原地旋转.png">
 
     分块内部反转再移动到相应位置：  
     <img src="images/算法/偶数.png" width="250"> ======== <img src="images/算法/奇数.png" width="244">
 
-5. 零矩阵  
+2. 零矩阵  
     编写一种算法，若M × N矩阵中某个元素为0，则将其所在的行与列清零。
 
     ```Java
@@ -325,7 +326,7 @@ class MyHashMap {
         }
     ```
 
-6. 对角线遍历  
+3. 对角线遍历  
 <img src="images/算法/对角线遍历.png" width="300">  
 
 ⭐m行就有m条, n列n条因为第1行算过了，就-1
