--- a/docs/4-算法.md
+++ b/docs/4-算法.md
@@ -6,7 +6,7 @@
 
 ## 经典算法题集锦
 
-### 题库
+### 一、题库
 
 1. 两数之和
 
@@ -42,93 +42,152 @@
 2. 设计哈希映射  
 不使用任何内建的哈希表库设计一个哈希映射（HashMap）  
 
-```Java
-// 链地址法
-class MyHashMap {
-    private class Pair {
-        private int key;
-        private int value;
+    ```Java
+    // 链地址法
+    class MyHashMap {
+        private class Pair {
+            private int key;
+            private int value;
 
-        public Pair(int key, int value) {
-            this.key = key;
-            this.value = value;
-        }
+            public Pair(int key, int value) {
+                this.key = key;
+                this.value = value;
+            }
 
-        public int getKey() {
-            return key;
-        }
+            public int getKey() {
+                return key;
+            }
 
-        public int getValue() {
-            return value;
-        }
+            public int getValue() {
+                return value;
+            }
 
-        public void setValue(int value) {
-            this.value = value;
-        }
-    }
-
-    private static final int BASE = 769;
-    private LinkedList[] data;
-
-    /** Initialize your data structure here. */
-    public MyHashMap() {
-        data = new LinkedList[BASE];
-        for (int i = 0; i < BASE; ++i) {
-            data[i] = new LinkedList<Pair>();
-        }
-    }
-    
-    /** value will always be non-negative. */
-    public void put(int key, int value) {
-        int h = hash(key);
-        Iterator<Pair> iterator = data[h].iterator();
-        while (iterator.hasNext()) {
-            Pair pair = iterator.next();
-            if (pair.getKey() == key) {
-                pair.setValue(value);
-                return;
+            public void setValue(int value) {
+                this.value = value;
             }
         }
-        data[h].offerLast(new Pair(key, value));
-    }
-    
-    /** Returns the value to which the specified key is mapped, or -1 if this map contains no mapping for the key */
-    public int get(int key) {
-        int h = hash(key);
-        Iterator<Pair> iterator = data[h].iterator();
-        while (iterator.hasNext()) {
-            Pair pair = iterator.next();
-            if (pair.getKey() == key) {
-                return pair.value;
-            }
-        }
-        return -1;
-    }
-    
-    /** Removes the mapping of the specified value key if this map contains a mapping for the key */
-    public void remove(int key) {
-        int h = hash(key);
-        Iterator<Pair> iterator = data[h].iterator();
-        while (iterator.hasNext()) {
-            Pair pair = iterator.next();
-            if (pair.key == key) {
-                data[h].remove(pair);
-                return;
-            }
-        }
-    }
 
-    private static int hash(int key) {
-        return key % BASE;
+        private static final int BASE = 769;
+        private LinkedList[] data;
+
+        /** Initialize your data structure here. */
+        public MyHashMap() {
+            data = new LinkedList[BASE];
+            for (int i = 0; i < BASE; ++i) {
+                data[i] = new LinkedList<Pair>();
+            }
+        }
+        
+        /** value will always be non-negative. */
+        public void put(int key, int value) {
+            int h = hash(key);
+            Iterator<Pair> iterator = data[h].iterator();
+            while (iterator.hasNext()) {
+                Pair pair = iterator.next();
+                if (pair.getKey() == key) {
+                    pair.setValue(value);
+                    return;
+                }
+            }
+            data[h].offerLast(new Pair(key, value));
+        }
+        
+        /** Returns the value to which the specified key is mapped, or -1 if this map contains no mapping for the key */
+        public int get(int key) {
+            int h = hash(key);
+            Iterator<Pair> iterator = data[h].iterator();
+            while (iterator.hasNext()) {
+                Pair pair = iterator.next();
+                if (pair.getKey() == key) {
+                    return pair.value;
+                }
+            }
+            return -1;
+        }
+        
+        /** Removes the mapping of the specified value key if this map contains a mapping for the key */
+        public void remove(int key) {
+            int h = hash(key);
+            Iterator<Pair> iterator = data[h].iterator();
+            while (iterator.hasNext()) {
+                Pair pair = iterator.next();
+                if (pair.key == key) {
+                    data[h].remove(pair);
+                    return;
+                }
+            }
+        }
+
+        private static int hash(int key) {
+            return key % BASE;
+        }
     }
-}
-```
+    ```
+
+3. 回文数（不用数字变字符串）
+
+   ```Java
+    public boolean isPalindrome(int x) {
+        // 先排除负数和0，以及最后一位为0的
+        if (x < 0 || (x % 10 == 0 && x != 0)) return false;
+        // 分析正数
+        int r = 0;
+        // 当x <= r时，已经处理到一半了
+        while (x > r) {
+            // 给反转数 每次乘以10并加上x对10的余数
+            r = r * 10 + x % 10;
+            // x要每次除以10取整
+            x /= 10;
+        }
+        // 若为奇数位，通过r/10 去除中间位的数字
+        return x == r || x == r / 10;
+    }
+   ```
+
+4. 罗马数字转整数
+
+    ```Java
+    class Solution {
+        public int romanToInt(String s) {
+            int sum = 0;
+            int preNum = getValue(s.charAt(0));
+            // 从第二位开始遍历
+            for (int i = 1; i < s.length(); i++) {
+                int num = getValue(s.charAt(i));
+                // 前 < 后 就减去
+                if (preNum < num) {
+                    sum -= preNum;
+                } else {
+                    sum += preNum;
+                }
+                // 往下前进一位
+                preNum = num;
+            }
+            // 求和
+            sum += preNum;
+            return sum;
+        }
+
+        private int getValue(char ch) {
+            switch(ch) {
+                case 'I': return 1;
+                case 'V': return 5;
+                case 'X': return 10;
+                case 'L': return 50;
+                case 'C': return 100;
+                case 'D': return 500;
+                case 'M': return 1000;
+                default: return 0;
+            }
+        }
+    }
+    ```
 
 ---
 
-### 数组和字符串
+### 二、数组和字符串
 
-#### 一、数组
+#### 数组
 
 1. 寻找数组的中心索引
 
@@ -163,8 +222,7 @@ class MyHashMap {
 &emsp;&emsp;给1个排序数组和个1目标值，在数组中找到目标值，并返回其索引。如果目标值不存在于数组中，返回它将会被按顺序插入的位置。  
 &emsp;&emsp;⭐️必须使用时间复杂度为 O(log n) 的算法。  
 
-<img src="images/算法/算法示例1.png">  
-    
+    <img src="images/算法/算法示例1.png">  
 
     ```Java
     1. 暴力解法：   不满足时间复杂度为O(log n)  此乃线性搜索
@@ -199,9 +257,7 @@ class MyHashMap {
     **总结：**  
     利用二分查找法，计算mid值，mid小则把范围定在右，重新计算mid
 
-    ---
-
-1. 合并区间  
+3. 合并区间  
 &emsp;&emsp;以数组 intervals 表示若干个区间的集合，其中单个区间为 intervals[i] = [starti, endi] 。合并所有重叠的区间，并返回 一个不重叠的区间数组，该数组需恰好覆盖输入中的所有区间 。
 
     ```Java
@@ -239,8 +295,7 @@ class MyHashMap {
     再确定最简单的不需要合并的情况 （右1 < 左2）  直接添加  
     最后需要合并的 取右边更大的一个  更改值
 
-    ---
-1. 二维数组---原地旋转矩阵  
+4. 二维数组---原地旋转矩阵  
     &emsp;&emsp;一幅由 N × N 矩阵表示的图像，其中每个像素的大小为 4 字节。请将图像旋转 90 度。  
     ⭐不占用额外内存空间能否做到？
 
@@ -303,7 +358,7 @@ class MyHashMap {
     分块内部反转再移动到相应位置：  
     <img src="images/算法/偶数.png" width="250"> ======== <img src="images/算法/奇数.png" width="244">
 
-2. 零矩阵  
+5. 零矩阵  
     编写一种算法，若M × N矩阵中某个元素为0，则将其所在的行与列清零。
 
     ```Java
@@ -326,22 +381,22 @@ class MyHashMap {
         }
     ```
 
-3. 对角线遍历  
-<img src="images/算法/对角线遍历.png" width="300">  
+6. 对角线遍历  
+    <img src="images/算法/对角线遍历.png" width="300">  
 
-⭐m行就有m条, n列n条因为第1行算过了，就-1
+    ⭐m行就有m条, n列n条因为第1行算过了，就-1
 
-- 共有m+n-1条对角线  对角线编号为i 属于（0, m+n-2）
-  - i为偶数：从下往上遍历  
-  - i为奇数：从上往下  
+   - 共有m+n-1条对角线  对角线编号为i 属于（0, m+n-2）
+     - i为偶数：从下往上遍历  
+     - i为奇数：从上往下  
 
-- 从下往上时：
-  - 当 i < m 时, 该对角线遍历起点为 (i, 0)
-  - 当 i >= m 时，起点为 (m-1, i-m+1)  
-  &emsp;&emsp;⭐(m-1)即最后一行，(i-m+1)是 i 距离 m 即拥有元素最多的一条对角线的距离 + 1,因为m就在第1列
-- 从上往下时：
-  - 当 i < n 时, 起点为 (0, i)
-  - 当 i >= n 时, 起点为 (i-n+1, n-1)
+   - 从下往上时：
+     - 当 i < m 时, 该对角线遍历起点为 (i, 0)
+     - 当 i >= m 时，起点为 (m-1, i-m+1)  
+    &emsp;&emsp;⭐(m-1)即最后一行，(i-m+1)是 i 距离 m 即拥有元素最多的一条对角线的距离 + 1,因为m就在第1列
+   - 从上往下时：
+     - 当 i < n 时, 起点为 (0, i)
+     - 当 i >= n 时, 起点为 (i-n+1, n-1)
 
     ```Java
     // 第一种解法  常规
@@ -386,7 +441,7 @@ class MyHashMap {
     }
     ```
 
-#### 二、字符串
+#### 字符串
 
 1. 最长公共前缀  
 
@@ -986,86 +1041,28 @@ class MyHashMap {
 
 16. 移动0
 
-```Java
-class Solution {
-    public void moveZeroes(int[] nums) {
-        int n = nums.length;
-        int l = 0; int r = 0;
-        while (r<n){
-            // [0,1,0,3,12]找到非0值与左指针l交换，交换了l才+1，保证l指向的一直跟随着0
-            if (nums[r] != 0) {
-                swap(nums,l,r);    // [1,0,0,3,12]
-                l++;
+    ```Java
+    class Solution {
+        public void moveZeroes(int[] nums) {
+            int n = nums.length;
+            int l = 0; int r = 0;
+            while (r<n){
+                // [0,1,0,3,12]找到非0值与左指针l交换，交换了l才+1，保证l指向的一直跟随着0
+                if (nums[r] != 0) {
+                    swap(nums,l,r);    // [1,0,0,3,12]
+                    l++;
+                }
+                r++;
             }
-            r++;
+        }
+        public void swap(int[] nums,int l,int r) {
+            int temp = 0;
+            temp = nums[l];
+            nums[l] = nums[r];
+            nums[r] = temp;
         }
     }
-    public void swap(int[] nums,int l,int r) {
-        int temp = 0;
-        temp = nums[l];
-        nums[l] = nums[r];
-        nums[r] = temp;
-    }
-}
-```
+    ```
 
-#### 三、简单题
+### 链表
 
-1. 回文数（不用数字变字符串）
-
-   ```Java
-    public boolean isPalindrome(int x) {
-        // 先排除负数和0，以及最后一位为0的
-        if (x < 0 || (x % 10 == 0 && x != 0)) return false;
-        // 分析正数
-        int r = 0;
-        // 当x <= r时，已经处理到一半了
-        while (x > r) {
-            // 给反转数 每次乘以10并加上x对10的余数
-            r = r * 10 + x % 10;
-            // x要每次除以10取整
-            x /= 10;
-        }
-        // 若为奇数位，通过r/10 去除中间位的数字
-        return x == r || x == r / 10;
-    }
-   ```
-
-2. 罗马数字转整数
-
-```Java
-class Solution {
-    public int romanToInt(String s) {
-        int sum = 0;
-        int preNum = getValue(s.charAt(0));
-        // 从第二位开始遍历
-        for (int i = 1; i < s.length(); i++) {
-            int num = getValue(s.charAt(i));
-            // 前 < 后 就减去
-            if (preNum < num) {
-                sum -= preNum;
-            } else {
-                sum += preNum;
-            }
-            // 往下前进一位
-            preNum = num;
-        }
-        // 求和
-        sum += preNum;
-        return sum;
-    }
-
-    private int getValue(char ch) {
-        switch(ch) {
-            case 'I': return 1;
-            case 'V': return 5;
-            case 'X': return 10;
-            case 'L': return 50;
-            case 'C': return 100;
-            case 'D': return 500;
-            case 'M': return 1000;
-            default: return 0;
-        }
-    }
-}
-```
