--- a/docs/8-大数据.md
+++ b/docs/8-大数据.md
@@ -4,7 +4,7 @@
 > ***XiaoCheng Programming Learning Book***
 >
 
-## 数仓工作准备
+## Ⅰ-数仓
 
 ### 一、基础知识
 
@@ -35,3 +35,13 @@
     <img src="images/大数据/OLAP应用.png"  width="600">
     <img src="images/大数据/Bigdata系统.png" width="600">
 
+## Ⅱ-Kafka
+
+### 一、基础概念
+
+1. Kafka是一个分布式流处理平台，由Scala和Java编写  
+2. 消息队列（Message Queue）  
+    - 消息队列（Message Queue）是分布式系统中的一个组件，用于上下游传递消息。在消息队列中，上下午分别代表消息的生产者和消费者。  
+    - 消息队列是分布式系统中的重要组件，主要解决应用耦合，异步消息，流量削锋等问题。  
+    - 消息队列的优点：解耦、异步、削峰、可恢复性、缓冲
+3. 
