--- a/docs/个人提升.md
+++ b/docs/个人提升.md
@@ -5,4 +5,6 @@
 >
 
 * ================================个人提升================================
-  * [Java八股文](https://zhuanlan.zhihu.com/p/660378669)
+  * [Java大彬](https://topjavaer.cn/java/java-basic.html)
+  * [Java二哥](https://javabetter.cn/sidebar/sanfene/jvm.html)
+  * [影视飓风](https://www.ysjf.com/index)
