--- a/docs/扩展.md
+++ b/docs/扩展.md
@@ -6,3 +6,4 @@
 
 * ================================扩展================================
   * [Git与GitHub](docs/7-Git与GitHub.md)
+  * [设计模式](docs/9-设计模式.md)
