--- a/docs/1-三大件.md
+++ b/docs/1-三大件.md
@@ -30,7 +30,9 @@
 
 ### 1. 选择器
 
-+ 元素(p)、类(class)、id(#)、通配(*)、属性 **(input[type="text"** 分组 (",") 选择器
++ 元素(p)、类(class)、id(#)、通配(*)、属性 **(input[type="text"])**  
++ 分组 (",") 选择器  
++ A B 选择所有的A 和 B 标签的元素  
 + 后代组合器 ===> ***div p***  (选得到孙代、曾孙等)
 + 子代组合器 ===> ***div > p*** (只有子代)
 + 一般兄弟组 ===> ***div ~ p*** (同一类别，共享同一父节点)
@@ -39,9 +41,25 @@
    >
    >***a:link*** =====> 未访问的链接  
    >***a:visited*** ===> 已访问的链接  
-   >***a:hover*** ====>鼠标划过链接  
-   >***a:active*** ====>已选中的链接  
-   >
+   >***a:hover*** ====> 鼠标划过链接  
+   >***a:active*** ====> 已选中的链接  
+   > p:first-child ====> p元素中第一个子元素  
+   > p:only-child ====> 仅有一个孩子的（唯一元素）
+   > p:only-of-type ====> 唯一的p元素
+   > p:last-child ====> p中最后一个孩子
+   > p:last-of-type ====> 最后一个p
+   > p:nth-child(2) ====> p元素中第二个孩子
+   > p:nth-last-child(2) ====> p中倒数第二个孩子
+   > p:first-of-type ====> 第一个p元素
+   > p:nth-of-type(2/odd/even) 第二个 / 奇数 / 偶数 个p元素
+   > p:nth-of-type(An+B) ===> p中从B开始，A倍的元素
+   > p:empty =======> p中为空
+   > :not(#fancy) ====> 不是id="fancy"的元素
+   > a[href="b"] ====> 所有属性为href(值为b)的a元素 
+   > .toy[category^=“Swim”] ====> toy类中category属性以Swim开头
+   > img[src$=".jpg"] ====> img标签中src属性以.jpg结尾的
+   > [class*=“heading”] ====> 类属性带有heading的
+
 + 伪元素(选择一个元素的某个部分而不是元素自己) ===>***p::first-line***
   
 ### 2. 文档流
@@ -100,10 +118,11 @@
    > `center`： 居中  
    > `space-between`：两端对齐，项目之间的间隔都相等，从头开始。  
    > `space-around`：每个项目两侧的间隔相等。
-   <img src="images/三大件/justify-content.png">  
+   <img src="images/三大件/justify-content.png" width=400>  
+5. `align-content`: 属性同上  
 
-5. `align-items`属性===(定义项目在交叉轴上如何对齐)
-   > `stretch`（默认值）：项目未设置高度或设为auto，占满整个容器的高度
+6. `align-items`属性===(定义项目在交叉轴上如何对齐)
+   > `stretch`（默认值）：项目未设置高度或设为auto，占满整个容器的高度  
    > `flex-start`：交叉轴的起点对齐  
    > `flex-end`：终点对齐  
    > `center`：中点对齐  
@@ -112,19 +131,22 @@
 
    <img src="images/三大件/image-3.png" width="400" height="200">
 
-6. 项目属性
-   > `order` ========= 数值越小越靠前(0)  
+7. 项目属性
+   > `order` ========= 数值越小越靠前(-1, 0, 1) css中选中一个项目进行相对移动  
    > `flex-grow` ====== 放大比例(0)  
    > `flex-shrink` ====== 缩小比例(1)  
    > `flex-basis` ====== 定义在分配多余空间前，项目占据的主轴空间  
    > `flex` ========== flex-grow, flex-shrink 和 flex-basis的简写，默  为(0 1 auto)快捷---> auto (1 1 auto) 和 none (0 0 auto)  
-   > `align-self` ====== 允许单个项目有与其他项目不一样的对齐方式
+   > `align-self` ====== 允许单个项目有与其他项目不一样的对齐方式,选自己
 
 ##### (3) Grid 布局
 
 1. 网格轨道  `grid-template-columns`与`grid-template-rows`
    > *A*  
-   > `grid-template-columns`: ***auto auto auto auto***;  
+   > `grid-template-columns`: ***50% 12.5% 12.5% 12.5% 12.5%;***  
+   > `grid-template-columns`: ***repeat(8, 12.5%);***  
+   > `grid-template-columns`: ***1fr 5fr;***  
+   > `grid-template-columns`: ***1fr 50px / 1fr 4fr;*** (横切分1份和50px，竖切分1份和4份)  
    > `grid-template-rows`: ****100px 300px***;  
    > ***fr***：一个 fr 单位代表网格容器中可用空间的一等份
 2. 网格间距
@@ -133,10 +155,16 @@
    > `grid-row-gap` ======二者简写  
 3. 网格线
    > .item1 {  
-         grid-column-start: 1;  
-         grid-column-end: 3;  
+   &emsp;&emsp;`grid-column-start`: 1;  
+   &emsp;&emsp;`grid-column-end`: 3;  
+   &emsp;&emsp;`grid-column-end`: span 3;  
+   &emsp;&emsp;`grid-column`: 4 / 6;  
+   &emsp;&emsp;`grid-column`: span 3 / 5;  
+   &emsp;&emsp;`grid-area`: 1 / 2 / 4 / 6 (row:1-4 column:2-6)  
+   &emsp;&emsp;`order`: 1 排序  
          }
    >
+
 <img src="images/三大件/image-4.png" width="400" height="250">
 
 ##### (4) 瀑布流
@@ -176,6 +204,37 @@ div
     50%  {background: blue; left:200px; top:200px;}
     75%  {background: green; left:0px; top:200px;}
     100% {background: red; left:0px; top:0px;}
+}
+
+# 组合 
+“bottom” 竖直方向移动
+“animation-name: rotate, move;”                 注册多个关键帧  
+“animation-duration: 3s, 6s;”                   分别指定运行时长  
+“animation-iteration-count: 2 / infinite;”      动画重播2次/无限次  
+“animation-direction: reverse;”                 反转方向（默认顺时针）  
+“animation-direction: alternate（-reverse）;”   先顺再逆时针（先逆再顺时针）        
+“animation-delay: 1s”                           延迟 1s 后再播放动画  
+“animation-fill-mode: forwards / backwards;”    动画结束后/前 仍然保持其状态（展示关键帧状态）（both即二者之和） 
+“animation-play-state: running / paused”        允许暂停动画，然后从同一位置继续播放  
+“animation-timing-function: ease / linear”      定义动画如何播放 曲线 / 线性 （ease-in, ease-out, ease-in-out）
+
+@keyframes rotate {
+  50% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes move {
+  50% {
+    bottom: 0px; 
+  }
+  100% {
+    bottom: -50px;
+  }
+}
+
+.stone-wheel {
+  animation-name: rotate, move;
+  animation-duration: 3s, 6s;
 }
 ```
 
@@ -231,7 +290,7 @@ background-image: linear-gradient(-90deg, red, yellow);
 > background-image ====> 添加背景图片  
 > background-size =====> 背景图片大小 px与%  
 > background-origin ====> 位置区域  
-> |||||||| content-box, padding-box,和 border-box区域内可以放置背景图像|||||  
+> ========== content-box, padding-box,和 border-box区域内可以放置背景图像=====  
 > background-clip =====> 剪裁属性:从指定位置开始绘制  
 
 #### 11. 边框
@@ -324,6 +383,20 @@ div
    >
 + **Symbol(一个永远不会重复的字符串)**
 
++ NaN 由非数字值得来（'orange' - 4, 0/0, (-1) ** 0.5）  
+   但是typeOf(NaN)结果是 “number”
++ Infinity 无穷
+
++ 值为False的Boolean类型：
+  + "" / ''  
+  + 0 / -0  
+  + Nan  
+  + undefined  
+  + null  
+  + !value (!5) 返回false  
+   value && true （5 && true） ====> true  
+   value || false (5 || false) ====> 5
+
 + 返回类型：  
    > 1.typeof +数据  
    > 2.数据.constuctor  
@@ -343,7 +416,7 @@ div
 
 ### 3. 函数function
 
-  - 全局调用
++ 全局调用
 
   ```js
   function myFunction() {
