--- a/docs/3-前端工程化.md
+++ b/docs/3-前端工程化.md
@@ -791,7 +791,7 @@ $.getJSON("https://www.runoob.com/try/ajax/jsonp.php?jsoncallback=?", function(d
 
 ```Js
 var vm = new Vue({
-  ⭐el: '#vue_det',
+  el: '#vue_det',
   data: {
       site: "XiaoCheng教程",
       url: "www.laodeng.com",
@@ -854,7 +854,7 @@ document.write(vm.$el === document.getElementByI('vue_det'))
 
   1. v-model 实现Model与View的双向绑定 \<input v-model="message">
 
-  - 用在在 input、select、textarea、checkbox、radio 等
+  - 用在在 input、select、textarea、checkbox、radio 等表
   单控件元素
   - 对于button按钮可以用 v-on 监听事件，对用户输入响应
 
@@ -1058,7 +1058,7 @@ v-on 事件监听 ====== v-on:click="say"  简写为 @click="say"
 
 #### 7.表单
 
-MVVM模型
+MVVM模型  
 <img src="images/工程化/mvvm.png" width="450">  
 
 v-model 指令在表单控件元素上创建双向数据绑定  
@@ -1116,18 +1116,22 @@ v-model 会根据控件类型自动选取正确的方法来更新元素
 1. 全局组件  
 &emsp;&emsp;注册 Vue.component(tagName, options) / 组件名，配置选项
 
-      ```Js
-      <div id="app">  <runoob></runoob>   </div>
-      
-      <script>// 注册
-      Vue.component('runoob', {
-      template: '<h1>自定义组件!</h1>'
-      })
+    ```Js
+    <div id="app">  
+        <runoob></runoob>   
+    </div>
 
-      new Vue({
-      el: '#app'
-      })</script>
-      ```
+    <script>
+        // 注册
+        Vue.component('runoob', {
+            template: '<h1>自定义组件!</h1>'
+        })
+
+        new Vue({
+            el: '#app'
+        })
+    </script>
+    ```
 
 2. 局部组件
 
